# autofsdp

./: README.md  pyproject.toml
examples/: training.py
src/autofsdp/: __init__.py  fsdp.py  fsdp_test.py
