[project]
name = "autofsdp"
version = "0.1.0"
description = "Fully-sharded data parallelism in jax with minimal code changes."
readme = "README.md"
authors = [
    { name = "smonsays", email = "smonsays@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.5.0",
    "jaxtyping>=0.2.37",
]

[project.scripts]
autofsdp = "autofsdp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
ignore = ["F722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-single-line = true

[dependency-groups]
dev = [
    "chex>=0.1.88",
    "flax>=0.10.2",
    "jax[cuda12]>=0.5.0",
    "optax>=0.2.4",
]
